se mejoro show ya muestra puestos

--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Cargo:</strong>
-  <%= @e.position.nombre %>
+  <%= @e.nombre %>
 </p>
 
 <%= link_to 'Edit', edit_employee_path(@employee) %> |
